@@ -1,1 +1,2 @@
-Added Updater
+- Restore Exception Handling on Runtime Crashes
+- Remove Debugging for Updater
